# spotify-sync

./: .gitignore  Cargo.toml  Dockerfile  application.yaml
.github/workflows/: build-deploy.yml  cleanup-old-images.yml  pr-buid.yaml
kubernetes/: deploy.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
src/: main.rs
