[package]
name = "spotify-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
chrono = "0.4.38"
config = "0.14.0"
cron = "0.12.1"
futures = "0.3.30"
itertools = "0.13.0"
rspotify = "0.13.2"
serde = { version = "1.0.207", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
