[package]
name = "spotify-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.8.0"
chrono = "0.4.38"
config = "0.15.0"
cron = "0.15.0"
futures = "0.3.30"
http = "1.1.0"
itertools = "0.14.0"
rspotify = "0.15.0"
serde = { version = "1.0.207", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
